[package]
name = "liveframe"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Graphics_Dwm",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
] }
ctrlc = "3.4.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oauth2 = "4.4"
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
hyper-rustls = "0.24"
url = "2.4"
dirs = "5.0"
chrono = "0.4"
log = "0.4"
env_logger = "0.10"
