[package]
name = "liveframe"
version = "0.2.0"
edition = "2021"

[dependencies]
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Graphics_Dwm",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
] }
ctrlc = "3.4.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oauth2 = "4.4"
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
hyper-rustls = "0.24"
url = "2.4"
dirs = "5.0"
chrono = "0.4"
log = "0.4"
env_logger = "0.10"
yt-dlp = { version = "2.7.2", features = ["live-streaming"] }
ebur128 = "0.1"
tokio-util = "0.7"
anyhow = "1"

# yt-dlp pins lofty 0.23.2, but all 0.23.x patch releases on crates.io are yanked
# (RUSTSEC-2024-0436 — `paste` crate). yt-dlp itself patches to a fork; we must do
# the same from the workspace root because nested [patch] sections are ignored.
[patch.crates-io]
lofty = { git = "https://github.com/boul2gom/lofty-rs", rev = "d2e41640481a48a95303d95939ba831767afcec8" }
